--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "liidad",
   "license": "ISC",
   "dependencies": {
+    "antd": "^1.11.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
@@ -28,6 +29,7 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "babel-plugin-antd": "^0.5.1",
     "express-handlebars": "^3.0.0",
     "lodash": "^4.15.0"
   }
