modify file structure

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
     "style-loader": "^0.13.1",
+    "superagent": "^2.2.0",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
