--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^0.25.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "file-loader": "^0.9.0",
     "helmet": "^2.1.2",
     "jsx-loader": "^0.13.2",
     "react": "^15.3.1",
@@ -27,6 +28,7 @@
     "request-promise": "^4.1.1",
     "style-loader": "^0.13.1",
     "superagent": "^2.2.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
